--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,10 @@
     <title>ToDo App - HTMX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="/static/htmx.js"></script>
+    <link src="/static/index.css" />
   </head>
   <body>
-    <h1>Hello, HTMX!</h1>
+    <p class="text-5xl">Hello, HTMX!</p>
   </body>
 </html>
 {{ end }}
