--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>ToDo App - HTMX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/static/index.css" rel="stylesheet" />
     <script src="/static/htmx.js"></script>
-    <link src="/static/index.css" />
   </head>
   <body>
     <div class="max-w-screen-md mx-auto mt8">
