--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
   <body>
     <div class="max-w-screen-md mx-auto mt8">
       <div class="flex justify-between items-center">
-        {{template "TotalCount"}} {{template "CompletedCount"}}
+        {{template "TotalCount" dict "Count" .Count "SwapOOB" false}} {{template
+        "CompletedCount" dict "Count" .CompletedCount}}
       </div>
       {{template "Form"}}
 
