--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,26 @@
 {{ define "Base" }}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>ToDo App - HTMX</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/static/index.css" rel="stylesheet" />
-    <script src="/static/htmx.js"></script>
-  </head>
-  <body>
-    <div class="max-w-screen-md mx-auto mt8">
-      <div class="flex justify-between items-center">
-        {{template "TotalCount" dict "Count" .Count "SwapOOB" false}} {{template
-        "CompletedCount" dict "Count" .CompletedCount}}
+  <!doctype html>
+  <html>
+    <head>
+      <meta charset="utf-8" />
+      <title>ToDo App - HTMX</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link href="/static/index.css" rel="stylesheet" />
+      <script src="/static/htmx.js"></script>
+    </head>
+    <body>
+      <div class="max-w-screen-md mx-auto mt8">
+        <div class="flex justify-between items-center">
+          {{ template "TotalCount" dict "Count" .Count "SwapOOB" false }}
+          {{ template "CompletedCount" dict "Count" .CompletedCount "SwapOOB" false }}
+        </div>
+        {{ template "Form" }}
+        <div id="items" class="space-y-2.5 mt-4">
+          {{ range .Items }}
+            {{ template "Item" dict "Item" . }}
+          {{ end }}
+        </div>
       </div>
-      {{template "Form"}}
-
-      <div id="items" class="space-y-2.5 mt-4">
-        {{ range .Items}}{{template "Item"}}{{end}}
-      </div>
-    </div>
-  </body>
-</html>
+    </body>
+  </html>
 {{ end }}
