--- a/templates/form.html
+++ b/templates/form.html
@@ -46,7 +46,12 @@
         </svg>
       </button>
       {{ if .Editing }}
-        <form class="flex items-center justify-between flex-1">
+        <form
+          hx-put="/tasks/{{ .Item.ID }}"
+          hx-target="#task-{{ .Item.ID }}"
+          hx-swap="outerHTML"
+          class="flex items-center justify-between flex-1"
+        >
           <div class="relative">
             <span class="absolute inset-y-0 right-2.5 flex items-center">
               <button class="text-blue-500 hover:text-blue-700">
