--- a/templates/form.html
+++ b/templates/form.html
@@ -23,12 +23,13 @@
 {{ define "InnerItem" }}
   <div
     id="task-{{ .Item.ID }}"
-    class="flex items-center justify-between bg-gray-100 rounded-lg px-4 py-2.5 transition"
+    class="draggable flex items-center justify-between bg-gray-100 rounded-lg px-4 py-2.5 transition"
   >
+    <input type="hidden" name="item" value="{{ .Item.ID }}" />
     <div class="flex items-center space-x-2.5">
       <button
         type="button"
-        class="cursor-move text-gray-500 hover:text-gray-700 handle"
+        class="handle cursor-move text-gray-500 hover:text-gray-700"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
