--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link href="/static/index.css" rel="stylesheet" />
       <script src="/static/htmx.js"></script>
+      <script src="/static/sortable.js"></script>
     </head>
     <body>
       <div class="max-w-screen-md mx-auto mt8">
@@ -15,11 +16,19 @@
           {{ template "CompletedCount" dict "Count" .CompletedCount "SwapOOB" false }}
         </div>
         {{ template "Form" }}
-        <div id="items" class="space-y-2.5 mt-4">
+
+
+        <form
+          hx-put="/tasks"
+          hx-trigger="end"
+          hx-swap="none"
+          id="items"
+          class="space-y-2.5 mt-4"
+        >
           {{ range .Items }}
             {{ template "Item" dict "Item" . "SwapOOB" false "Editing" false }}
           {{ end }}
-        </div>
+        </form>
       </div>
     </body>
   </html>
